# assemblyish

./: .gitignore  README.md  pyproject.toml
assemblyish/: __init__.py  compiler.py  errors.py  instruction.py  parser.py
